csrc/tests/codegen_probes/errors/err_call_nonfunction.bas
' REJECT: calling a scalar variable as if it were a function.
' check.check_is_callable:78 -> syntax_error_unexpected_class.
Dim v As Byte
v = 1
Print v(3)
